[gd_scene load_steps=4 format=3 uid="uid://b486dpbtpwx6o"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_okffg"]
[ext_resource type="Texture2D" uid="uid://jk4juh4pr4os" path="res://sprites/bg.png" id="2_r57gm"]

[sub_resource type="Theme" id="Theme_5u3fx"]
default_font_size = 24

[node name="Main" type="Node2D"]
script = ExtResource("1_okffg")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.376471)
position = Vector2(576.25, 324.5)
scale = Vector2(3.85117, 3.8869)
texture = ExtResource("2_r57gm")

[node name="GraphEdit" type="GraphEdit" parent="."]
offset_left = 184.0
offset_top = 128.0
offset_right = 1136.0
offset_bottom = 651.0
scroll_offset = Vector2(-360.54, -176.1)
show_grid = false
snapping_enabled = false
right_disconnects = true
zoom = 0.54
minimap_enabled = false

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AdderNeuronButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_right = 114.0
offset_bottom = 56.0
text = "AdderNeuron"

[node name="InhibitoryNeuronButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 130.0
offset_right = 238.0
offset_bottom = 56.0
text = "Inhibitory-1"

[node name="InhibitoryNeuronButton2" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 252.0
offset_right = 360.0
offset_bottom = 56.0
text = "Inhibitory-2"

[node name="NegationButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 1.0
offset_top = 64.0
offset_right = 112.0
offset_bottom = 112.0
text = "Negation"

[node name="ThresholdButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 130.0
offset_top = 64.0
offset_right = 238.0
offset_bottom = 112.0
text = "Threshold"

[node name="DelayButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 248.0
offset_top = 64.0
offset_right = 328.0
offset_bottom = 112.0
text = "Delay"

[node name="Constant" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 338.0
offset_top = 64.0
offset_right = 418.0
offset_bottom = 112.0
text = "Constant"

[node name="InputButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 381.0
offset_right = 445.0
offset_bottom = 56.0
text = "Input"

[node name="OutputButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 462.0
offset_right = 526.0
offset_bottom = 56.0
text = "Output"

[node name="ChooseLevel" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 432.0
offset_top = 64.0
offset_right = 538.0
offset_bottom = 112.0
text = "ChooseLevel"

[node name="Input" type="TextEdit" parent="."]
offset_left = 1.0
offset_top = 116.0
offset_right = 48.0
offset_bottom = 280.0

[node name="Input2" type="TextEdit" parent="."]
offset_left = 1.0
offset_top = 289.0
offset_right = 48.0
offset_bottom = 450.0

[node name="Input3" type="TextEdit" parent="."]
offset_left = 1.0
offset_top = 464.0
offset_right = 48.0
offset_bottom = 639.0

[node name="ExpectedOutput" type="TextEdit" parent="."]
offset_left = 60.0
offset_top = 116.0
offset_right = 109.0
offset_bottom = 281.0

[node name="ExpectedOutput2" type="TextEdit" parent="."]
offset_left = 60.0
offset_top = 292.0
offset_right = 109.0
offset_bottom = 450.0

[node name="ExpectedOutput3" type="TextEdit" parent="."]
offset_left = 60.0
offset_top = 464.0
offset_right = 112.0
offset_bottom = 639.0

[node name="ActualOutput" type="TextEdit" parent="."]
offset_left = 125.0
offset_top = 115.0
offset_right = 174.0
offset_bottom = 280.0

[node name="ActualOutput2" type="TextEdit" parent="."]
offset_left = 125.0
offset_top = 291.0
offset_right = 174.0
offset_bottom = 449.0

[node name="ActualOutput3" type="TextEdit" parent="."]
offset_left = 125.0
offset_top = 463.0
offset_right = 177.0
offset_bottom = 638.0

[node name="Description" type="TextEdit" parent="."]
offset_left = 884.0
offset_top = -2.0
offset_right = 1148.0
offset_bottom = 80.0

[node name="ResetALL" type="Button" parent="."]
offset_left = 545.0
offset_top = 4.0
offset_right = 633.0
offset_bottom = 59.0
text = "ResetALL"

[node name="Step" type="Button" parent="."]
offset_left = 640.0
offset_top = 4.0
offset_right = 728.0
offset_bottom = 59.0
theme = SubResource("Theme_5u3fx")
text = "Step"

[node name="Reload" type="Button" parent="."]
offset_left = 544.0
offset_top = 64.0
offset_right = 632.0
offset_bottom = 112.0
theme = SubResource("Theme_5u3fx")
text = "Reload"

[node name="ChangeVMode" type="Button" parent="."]
offset_left = 640.0
offset_top = 64.0
offset_right = 760.0
offset_bottom = 112.0
theme = SubResource("Theme_5u3fx")
theme_override_font_sizes/font_size = 16
text = "ChangeVMode"

[node name="StepCounter" type="Label" parent="."]
offset_left = 760.0
offset_top = -2.0
offset_right = 920.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 31
text = "Steps:"

[node name="Cost" type="Label" parent="."]
offset_left = 760.0
offset_top = 39.0
offset_right = 920.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 31
text = "Cost:0"

[node name="Test" type="Label" parent="."]
offset_left = 760.0
offset_top = 80.0
offset_right = 920.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 31
text = "Test:"

[node name="SelectTest" type="SpinBox" parent="."]
offset_left = 1064.0
offset_top = 84.0
offset_right = 1147.06
offset_bottom = 120.0
min_value = 1.0
max_value = 1.0
value = 1.0
prefix = "Test"

[node name="FileDialog" type="FileDialog" parent="."]
title = "choose a level"
initial_position = 1
size = Vector2i(437, 334)
ok_button_text = "打开"
dialog_hide_on_ok = true
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.txt")
use_native_dialog = true

[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="pressed" from="Buttons/AdderNeuronButton" to="." method="createAdderNeuron"]
[connection signal="pressed" from="Buttons/InhibitoryNeuronButton" to="." method="createInhibitoryNeuron"]
[connection signal="pressed" from="Buttons/InhibitoryNeuronButton2" to="." method="createInhibitoryNeuron2"]
[connection signal="pressed" from="Buttons/NegationButton" to="." method="createNegation"]
[connection signal="pressed" from="Buttons/ThresholdButton" to="." method="createThreshold"]
[connection signal="pressed" from="Buttons/DelayButton" to="." method="createDelay"]
[connection signal="pressed" from="Buttons/Constant" to="." method="createConstant"]
[connection signal="pressed" from="Buttons/InputButton" to="." method="createInput"]
[connection signal="pressed" from="Buttons/OutputButton" to="." method="createOutput"]
[connection signal="pressed" from="Buttons/ChooseLevel" to="." method="_on_choose_level_pressed"]
[connection signal="pressed" from="ResetALL" to="." method="ResetAll"]
[connection signal="pressed" from="Step" to="." method="Step"]
[connection signal="pressed" from="Reload" to="." method="Reload"]
[connection signal="pressed" from="ChangeVMode" to="." method="_on_change_v_mode_pressed"]
[connection signal="value_changed" from="SelectTest" to="." method="_on_select_test_value_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
